# ai-video-editor

./: .agent.md  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIGURATION.md  CONSOLIDATED_TASK_STATUS.md  CONTRIBUTING.md  FEATURE_BREAKDOWN.md  Gemini changelog tests.txt  INSTALLATION.md  LICENSE  PUBLIC_RELEASE_CHECKLIST.md  README.md  RELEASE_SUMMARY.md  SECURITY.md  ai_director_plan.json  create_real_test_content.py  enhanced_ai_plan.json  enhanced_plan.json  mock_ai_plan.json  performance_benchmarks.json  pyproject.toml  pytest.ini  quick-start.md  requirements.txt  test_ai_integration.py  test_ai_plan.json  test_full_workflow.py  test_gemini_access.py  test_generator_import.py  test_import_debug.py  test_minimal_generator.py  test_plan.json  test_timeline.json  test_transcript.json  test_whisper_direct.py  transcribe.bat  validation_report.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: documentation-quality.yml
.kiro/: project_walkthrough.md  python_learning_guide.md  shared_memory.json  task_specification_template.md
.kiro/future-roadmap/: content-recommendation-engine.md
.kiro/steering/: collaborative-development-workflow.md  error-handling-patterns.md  integration-patterns.md  mcp-tools-utilization.md  performance-guidelines.md  testing-strategy.md
ai_plans/: sample_devotional_plan.json
ai_video_editor/: __init__.py
ai_video_editor/cli/: __init__.py  bridge.py  features.py  main.py
ai_video_editor/core/: __init__.py  audio_integration.py  batch_processor.py  cache_manager.py  config.py  content_context.py  context_manager.py  data_validator.py  exceptions.py  performance_optimizer.py  state_tracker.py  workflow_orchestrator.py
ai_video_editor/modules/: __init__.py
ai_video_editor/utils/: __init__.py  logging_config.py  performance_benchmarks.py  sanskrit_hindi_vocab.py
archive/: README.md  TASK_10_COMPLETION_SUMMARY.md  code_examples_test_report.md  documentation_analysis.py  documentation_content_map.md  documentation_redundancy_report.json  documentation_validation_report.md  final_validation_report.md  fix_documentation_issues.py  fix_validation_issues.py  quick-guide.md  redundancy_report_with_recommendations.md  task_9_completion_summary.md  test_code_examples.py  validate_documentation.py
archive/deprecated_config/: README.md  pytest.ini  setup.py
archive/deprecated_modules/: README.md  cache_manager.py  error_handling.py
archive/old_analysis_outputs/: README.md
config/: .env.example  README.md  development.env  testing.env
detailed_analysis/: analysis_report.json  audio_analysis.json  transcript.json
docs/: CROSS_REFERENCE_SUMMARY.md  FEATURES.md  NAVIGATION.md  PHASE_4_COMPLETION_SUMMARY.md  README.md
docs/api/: README.md
docs/archive/: README.md
docs/developer/: README.md  api-reference.md  architecture.md  contributing.md  testing.md
docs/examples/: README.md
docs/features/: transcribe.md
docs/project-status/: CONSOLIDATED_TASK_STATUS.md  README.md  TASK_12_COMPLETION_SUMMARY.md  task_12_validation_report.md
docs/support/: documentation-maintenance.md  error-handling-unified.md  faq-unified.md  faq.md  performance-unified.md  performance.md  project-status.md  troubleshooting-unified.md  troubleshooting.md
docs/tutorials/: README.md  first-video.md  understanding-output.md
docs/user-guide/: README.md  cli-reference.md  getting-started.md  quick-guide.md
examples/: audio_analysis_example.py  audio_context_integration_example.py  audio_enhancement_example.py  broll_analysis_example.py  broll_generation_integration_example.py  content_analyzer_example.py  content_intelligence_example.py  emotional_analysis_example.py  enhanced_video_analysis_example.py  gemini_client_example.py  metadata_generator_example.py  metadata_integration_example.py  performance_optimization_example.py  plan_execution_example.py  simple_broll_demo.py  thumbnail_generation_example.py  timeline_output.json  trend_analysis_example.py  video_analysis_example.py  video_composer_example.py  video_quality_assessment_example.py  workflow_orchestrator_example.py
faster_whisper_test/: audio_analysis.json
features/: README.md
features/01-audio-processing/: README.md  demo.py  requirements.txt  test.py
features/02-ai-content-analysis/: README.md  demo.py  requirements.txt  test.py
final_analysis/: analysis_report.json  transcript.json  video_analysis.json  visual_highlights.json
improved_analysis/: analysis_report.json  audio_analysis.json  complete_analysis.json  scenes.json
media/test/: README.md  vocab_lyrics.txt
reports/: .gitkeep
scripts/: README.md  cleanup_workspace.py  compare_analysis_methods.py  fix_malformed_links.py  migrate_output_dirs.py  run_docs_qa.bat  validate_documentation.py
scripts/samples/: create_test_audio.py
tests/: __init__.py  conftest.py
tests/acceptance/: test_user_acceptance.py
tests/data/: __init__.py  sample_data.py  test_data_manager.py
tests/integration/: __init__.py  test_audio_enhancement_integration.py  test_basic_workflow.py  test_content_context_integration.py  test_end_to_end_workflows.py  test_performance_optimization_integration.py  test_testing_framework.py  test_video_composer_plan_execution.py  test_workflow_cli_integration.py
tests/manual/: simple_test.py
tests/mocks/: __init__.py  api_mocks.py
tests/performance/: __init__.py  test_memory_usage.py  test_performance_benchmarks.py  test_processing_time.py
tests/real/: README.md
tests/unit/: __init__.py  test_ai_director.py  test_audio_analyzer.py  test_audio_context_integration.py  test_audio_enhancement.py  test_audio_synchronizer.py  test_batch_processor.py  test_broll_analysis.py  test_broll_generation.py  test_cache_manager.py  test_config.py  test_content_analyzer.py  (+15 more)
transcription/: ORGANIZATION_SUMMARY.md  README.md
transcripts/: sample_devotional_transcript.json
video_projects/: .gitignore  INSTRUCTIONS.md  README.md  batch_process.py  config.json  quick_start.py  setup_workspace.py
workspace/: README.md
(+128 files in other folders)
